# AutoGrad-on-Cpp

./: .gitignore  Backward.cpp  Backward.h  CMakeLists.txt  Layer.cpp  Layer.h  Matrix.cpp  Matrix.h  Value.cpp  Value.h  Vector.cpp  Vector.h  main.cpp
